<resources>
    <string name="app_name">Judo Canada Mobile App</string>
    <string name="activity_post_name">Post</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="preferences">Preferences</string>
    <string name="favorite">Favorites</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="news_feed">News</string>
    <string name="stats">Statistics</string>
    <string name="video">Video</string>
    <string name="calendar">Calendar</string>
    <string name="shop">Shop</string>
    <string name="no_internet_message">No Internet connection</string>
    <string name="login_name">Name :</string>
    <string name="login_firstname">First Name :</string>
    <string name="login_email">Email :</string>
    <string name="login_password">Password :</string>
    <string name="login_password_confirm">Confirm :</string>
    <string name="login_date_of_birth">Date of Birth :</string>
    <string name="login_numero_judo_canada">Judo Canada # :</string>
    <string name="login_btn_confirm">Confirm</string>
    <string name="login_btn_to_login">Login</string>
    <string name="login_btn_to_signup">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
