<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.judocanada.judocanadamobileappandroid.MainActivity">
<RelativeLayout
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout

        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_height="80dp"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.95"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:gravity="start" />

        <ImageButton
            android:id="@+id/btnUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:layout_weight="0.05"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/logo"
             />

    </LinearLayout>


    <LinearLayout

        android:background="@color/colorAccentDark"
        android:orientation="horizontal"
        android:layout_height="20dp"
        android:layout_width="match_parent">

    </LinearLayout>

    <fragment
        android:id="@+id/mainFragment"
        android:name="org.judocanada.judocanadamobileappandroid.PostsFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="304dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.333"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/news" />

        <ImageButton
            android:id="@+id/btnStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            app:srcCompat="@drawable/stats_grey"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"/>

        <ImageButton
            android:id="@+id/btnVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            app:srcCompat="@drawable/video_grey"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.333"
            android:text="@string/news_feed"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.333"
            android:text="@string/stats"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.333"
            android:text="@string/video"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>

<ProgressBar
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/progressBar"

    android:layout_centerInParent="true" />

</RelativeLayout>

</FrameLayout>